--- a/b01/src/main/resources/templates/ex/ex2.html
+++ b/b01/src/main/resources/templates/ex/ex2.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-  <div th:text="${list}"></div>
-  <div th:text="${map}"></div>
-  <div th:text="${dto}"></div>
+<div th:text="${list}"></div>
+<div th:text="${map}"></div>
+<div th:text="${dto}"></div>
 
-  <script th:inline="javascript">
+<script th:inline="javascript">
 
-    const list = [[${list}]];
+    const list = [[${list}]]
 
-    const map = [[${map}]];
+    const map = [[${map}]]
 
-    const dto = [[${dto}]];
+    const dto = [[${dto}]]
 
-    console.log(list);
-    console.log(map);
-    console.log(dto);
+    console.log(list)
+    console.log(map)
+    console.log(dto)
 
-  </script>
+</script>
+
 </body>
 </html>
