--- a/b01/src/main/resources/templates/ex/ex3.html
+++ b/b01/src/main/resources/templates/ex/ex3.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymleaf.org"
-                xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-                layout:decorate="~{layout/layout1.html}">
-
-<!--
-ex3.html 파일을 브라우저에 전송할 때
-layout/layout1.html을 가져다가 기본 템플릿으로 정하여
-결국 layout1.html을 브라우저에 전송함.
-
-그런데 layout1.html에서 각각 content 영역과 script 영역을
-ex3.html에 있는 것으로 대체해서 전송함
--->
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout1.html}">
 
 <div layout:fragment="content">
-    <h1>ex3.html</h1>
+
+  <h1>ex3.html</h1>
+
 </div>
 
 <script layout:fragment="script" th:inline="javascript">
 
-    const arr = [[${arr}]];
+  const arr = [[${arr}]]
 
 </script>
