--- a/b01/src/main/resources/templates/hello.html
+++ b/b01/src/main/resources/templates/hello.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <h1 th:text="${msg}"></h1>
+<h1 th:text="${msg}"></h1>
 
-<!--    1) 아래처럼 주석을 사용하면 브라우저에 아예 전송이 안 됨-->
-<!--/*    <div> */-->
-<!--/*        <h1>AAAA</h1> */-->
-<!--/*    </div> */-->
+<!--/*  <h3 th:each="${sos}">SOS</h3> */-->
 
-<!--/*    <div> */-->
-<!--/*        <h1>BBBB</h1> */-->
-<!--/*    </div> */-->
+<!--/* ${aaaa + bbb } */-->
+<!--/*
+ <div>
+    <h1>AAAA</h1>
+ </div>
+*/-->
+<div th:with="num1 = ${10}, num2 = ${20}">
+    <h4 th:text="${num1 + num2}"></h4>
+</div>
 
-<!--    2) 타임리프에서 필요하면 변수를 선언하고 사용할 수 있음-->
-    <div th:with="num1 = ${10}, num2 = ${20}">
-        <h4 th:text="${num1 + num2}"></h4>
-    </div>
 </body>
 </html>
