--- a/b01/src/main/resources/templates/board/read.html
+++ b/b01/src/main/resources/templates/board/read.html
@@ -67,6 +67,12 @@
 
 <script layout:fragment="script" th:inline="javascript">
 
+    const bno = [[${dto.bno}]]
 
+    get1(bno).then(data => {
+        console.log(data);
+    }).catch(e => {
+        console.error(e);
+    })
 
 </script>
