p.577까지. 댓글 목록 처리 중

--- a/b01/src/main/resources/templates/board/read.html
+++ b/b01/src/main/resources/templates/board/read.html
@@ -76,3 +76,19 @@
     })
 
 </script>
+
+<script layout:fragment="script" th:inline="javascript">
+
+    const bno = [[${dto.bno}]]
+
+    function printReplies(page, size, goLast) {
+
+        getList({bno, page, size, goLast}).then(
+            data => {console.log(data)}
+        ).catch(e => {
+            console.error(e)
+        })
+    }
+
+    printReplies(1,10)   // 무조건 호출
+</script>
